[package]
name = "clipcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2"
clap = { version = "4.0.32", features = ["derive"] }
atty = "0.2"
regex = "1.6.0"
image = "0.24.9"
string-template-plus = "0.4.3"
